refacto post java 11 update