@@ -333,7 +333,7 @@ public class Oadr20aVTNEiEventControllerTest {
 
 		// ensure currentValue is set to correct level when event status is
 		// "active" (rule 14)
-		assertEquals(new Double(2), new Double(eiEventSignalTypeActive.getCurrentValue().getPayloadFloat().getValue()));
+		assertEquals(Double.valueOf(2), Double.valueOf(eiEventSignalTypeActive.getCurrentValue().getPayloadFloat().getValue()));
 
 		// ensure correct signal name/type (rule 7)
 		assertEquals("SIMPLE", eiEventSignalTypeActive.getSignalName());
